[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pprint_problems"
version = "0.1.0"
authors = [
  { name="Andrew Keenan Richardson", email="richardson.andrew@gmail.com" },
]
description = "Alternative to the `jq` command that's a bit optimized for LLM eval datasets in jsonl format."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/qemqemqem/pprint_problems"
[project.scripts]
pprint_problems = "pprint_problems.cli:main"
#!/usr/bin/env python3

import argparse

def main():
    parser = argparse.ArgumentParser(
        description="Pretty print problems from jsonl files"
    )
    parser.add_argument(
        "file", 
        nargs="?", 
        type=argparse.FileType('r'),
        help="Input file (optional, defaults to stdin)",
        default=None
    )
    
    args = parser.parse_args()
    print("Hello from pprint_problems!")
    
if __name__ == "__main__":
    main()
