[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pprint_problems"
version = "0.1.13"
authors = [
  { name="Andrew Keenan Richardson", email="richardson.andrew@gmail.com" },
]
description = "Used to print entries from jsonl files, developed with LLM evals in mind."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.1",
    "numpy>=1.21.5",
    "rich>=13.9.4",
    "scipy>=1.8.0",
    "Pillow>=10.0.0",
    "kiwisolver>=1.4.0",
    "cycler>=0.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/qemqemqem/pprint_problems"
[project.scripts]
pprint_problems = "cli:main"
